proxmox/proxmox-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  type: ExternalName
  externalName: 192.168.0.1
  ports:
  - name: https
    port: 8006
    protocol: TCP
    targetPort: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
    haproxy.org/server-ssl: "true"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - proxmox.domain.com
      secretName: proxmox-tls
  rules:
  - host: proxmox.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox
            port:
              name: https
